# cdk-python-module-gitlab-pipeline

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  app.py  pyproject.toml
cdk_python_module/: cdk_workshop_stack.py  hello.py  hitcount.py  hitcounter.py
tests/unit/: test_cdk_python_module_stack.py
