[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mydomain-cdk-python-module"
authors = [
    {name = "Serge Poueme", email = "pouemes@amazon.com"},
    {name = "Jehu Osegbe", email = "osegbej@amazon.com"},
]
description = "My package description"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "BSD-3-Clause"}
version = "1.0.1"
